--- a/src/pages/services.mdx
+++ b/src/pages/services.mdx
@@ -6,54 +6,46 @@ import { Image } from "astro:assets";
 import talonlogo from "../assets/talon-logo.png"
 import orcalogo from "../assets/orca-logo.png"
 
+
 <h1 class="text-center text-2xl">Accessibility Software Consulting</h1>
 
 I have been developing and personally using a variety of software tools like
 voice control and screen readers for over 6 years on a wide variety of
-platforms. I would love to help you or your team with your personal or
-professional accessibility goals. I have provided software consulting
-services for accessibility and UX teams at Github Inc. as well as
-personalized sessions for professionals dealing with health challenges in a
-wide variety of industries like software, education, or engineering. 
+platforms. I am very experienced in this ecosystem and would love to help you or your team with your personal or
+professional accessibility goals. 
 
-## I can help you no matter if you are:
+<h2 class="p-8 text-center"> I have helped a wide variety of users including: </h2>
 
-- an individual with a health challenge like carpal tunnel or vision impairment looking to quickly get the best set
-up for personal needs 
-- a team leader or educator looking to support a
-colleague or student 
-- a researcher looking to better understand computer
-accessibility 
-- a developer looking to better understand screen readers or
-voice control tools from a technical perspective Sessions can be as long or
-as short you need. 
+- average computer users in healthcare, academia, finance, and many other industries looking for advice on their work setup while dealing with a health challenge
+- UX researchers at large tech companies like Github Inc.
+- experienced software developers looking for technical insight on the accessibility stack
 
-Not sure if your needs fit my services, reach out
-anyways! I am flexible!
+_Not sure if your needs fit my services, reach out
+anyways! I am flexible with format and session length!_
 
 <center>
-    <div class="flex items-center justify-center mt-10 gap-10">
+    <div class="flex items-center justify-center mt-10 gap-10 pb-10">
         <Image
             src={talonlogo}
             alt="Talon Logo"
             title="Talon Voice Control"
-            style="border-radius: 40px; margin-right: 10px; width: 200px; height: 200px;"
+            style="border-radius: 40px; margin-right: 10px; width: 150px; height: 150px;"
         />
         <Image
             src={orcalogo}
             alt="Orca"
             title="Orca Screen Reader"
-            style="border-radius: 40px; width: 200px; height: 200px;"
+            style="border-radius: 40px; width: 150px; height: 150px;"
         />
     </div>
-    <br />
-
-    <a class="button" href="/contact">Contact Me to Set Up a Meeting! </a>
+     <a class="bg-neutral-200 dark:bg-neutral-600 rounded-md p-4 hover:opacity-50 hover:cursor-pointer hover:border-neutral-800 !no-underline" href="/contact">Contact Me to Set Up a Meeting! </a>
 </center>
 <br />
-
+{/* 
 _Want to see a sample of my work and my knowledge of Talon? Check out some
 of my sample projects:_ 
+
+
 - [https://github.com/C-Loftus/talon-ai-tools](https://github.com/C-Loftus/talon-ai-tools)
 - Auto-fix dictation & convert between text formats with AI tools 
 - [https://github.com/C-Loftus/sight-free-talon](https://github.com/C-Loftus/sight-free-talon)
@@ -63,4 +55,4 @@ of my sample projects:_
 automation, Javascript browser automation, & much more! Cross platform too
 - [https://github.com/C-Loftus/Watercolor](https://github.com/C-Loftus/Watercolor)
 - Click on desktop elements by labeling them with an overlay. Example of my
-at-spi experience and Linux a11y
+at-spi experience and Linux a11y */}
