table is ok; backing it up

--- a/src/pages/services.mdx
+++ b/src/pages/services.mdx
@@ -16,7 +16,7 @@ professional accessibility goals.
 
 <h2 class="p-8 text-center"> I have helped a wide variety of users including: </h2>
 
-- computer users with chronic pain in healthcare, academia, finance, and many other industries looking for advice on their work setup while dealing with a health challenge
+- individuals with chronic pain working in tech, academia, finance, and many other industries looking for general advice on their work setup while dealing with a health challenge
 - UX researchers at large tech companies like Github Inc.
 - experienced software developers looking for technical insight on the accessibility stack
 
