fix portfolio link

--- a/src/pages/services.mdx
+++ b/src/pages/services.mdx
@@ -20,7 +20,7 @@ professional accessibility goals.
 - UX researchers at large tech companies like Github Inc.
 - experienced software developers looking for technical insight on the accessibility stack
 
-Feel free to check out my [portfolio](./portfolio) or [YouTube channel](https://youtube.com/@ColtonLoftus) for examples of my work.
+Feel free to check out my [portfolio](/portfolio) or [YouTube channel](https://youtube.com/@ColtonLoftus) for examples of my work.
 
 _Not sure if your needs fit my services, reach 
 anyways! I am flexible with format and session length!_
