--- a/src/pages/writings/linux-a11y.mdx
+++ b/src/pages/writings/linux-a11y.mdx
@@ -3,6 +3,7 @@ title: "Linux Hands-Free Accessibility"
 date: 2022-06-01T19:06:34-04:00
 draft: false
 tags: ["linux", "software", "accessibility", "programming"]
+summary: "An overview of voice control on Linux"
 layout: ../../layouts/CenteredText.astro
 ---
 
