--- a/src/pages/writings/x11Wayland.mdx
+++ b/src/pages/writings/x11Wayland.mdx
@@ -9,7 +9,7 @@ layout: ../../layouts/CenteredText.astro
 
 # X11 vs Wayland for Linux Accessibility
 
-X11 is the 11th version of the X windowing system. Until recently it was the default display server for Linux. X11 is generally speaking a monolith. It has a large legacy codebase and contains functionality for windowing, rendering, handling inputs, and a variety of other desktop operations. Wayland on the other hand tries to reduce the complexity by dealing only with low level operations like buffer submission or input delivery, and moving all operations like rendering and security decisions into specific Wayland compositors. Such compositors include mutter, sway, niri, or hyprland. One of Wayland's main design goals is atomicity. In X11 it is easy for applications to snoop on the inputs or state of others. In Wayland applications are generally isolated and any global state is dealt with by the compositor. 
+X11 is the 11th version of the X windowing system. For many years, it was the default display server for Linux but now many distributions like Ubuntu and Fedora are beginning to migrate away from it to Wayland. X11 is generally speaking a monolith. It has a large legacy codebase and contains functionality for windowing, rendering, handling inputs, and a variety of other desktop operations. Wayland on the other hand tries to reduce the complexity by dealing only with low level operations like buffer submission or input delivery, and moving all operations like rendering and security decisions into specific Wayland compositors. Such compositors include mutter, sway, niri, or hyprland. One of Wayland's main design goals is atomicity. In X11 it is easy for applications to snoop on the inputs or state of others. In Wayland applications are generally isolated and any global state is dealt with by the compositor. 
 
 Despite the benefits for maintainability and security, Wayland has presented a significant challenge to Linux desktop accessibility for two reasons. First, accessibility is often based around global state. Many assistive technology applications need ways of registering global shortcuts or querying information about other windows. For instance in the ATSPI protocol for querying accessibility information, there are calls like [get_accessible_at_point](https://docs.gtk.org/atspi2/method.Component.get_accessible_at_point.html) or [grab_focus](https://docs.gtk.org/atspi2/method.Component.grab_focus.html). While these work fine in X11, calls like these are generally meaningless within Wayland since there are no global coordinates and all windowing operations are controlled by the compositor. 
 
